--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,27 @@ services:
       - /app/.next
     ports:
       - 3000:3000
+    networks:
+      - fullstack-challenge
+  api:
+    container_name: api
+    image: api
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    command: ["uvicorn", "fullstack_challenge_api.main:app", "--port=20002", "--host=0.0.0.0", "--reload"]
+    environment:
+      COLUMNS: 164
+    tty: true
+    ports:
+      - "20002:20002"
+    env_file:
+      - ./api/config/.env
+    volumes:
+      - ./api/fullstack_challenge_api:/fullstack_challenge_api
+      - ./api/config/config.toml:/config/config.toml
+    networks:
+      - fullstack-challenge
+
+networks:
+  fullstack-challenge:
