--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "1.3.0"
+    "swr": "1.3.0",
+    "primereact": "8.6.0",
+    "primeicons": "6.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
